@@ -5,6 +5,9 @@
 	* tools/winlibs.R: Use proto3 library from rwinlib repo
 	* src/Makevars.win: Update to proto 3.0.0 paths
 
+	* inst/unitTests/runit.proto3.R: New test file
+	* inst/unitTests/data/proto3.proto: Support for new test file
+
 2016-10-29  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.4.7
